docs: update openapi.yaml
